Fixed Score Spacing.

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
 
 .body {
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex: 1;
     margin: 20px;
     
@@ -65,5 +65,5 @@
 .C-Score {
 
     padding: 5px;
-    text-align: center;
+    align-self: center;
 }
